# chokey

./: .gitignore  DEPLOY.md  README.md  erro.txt  package-lock.json  package.json  task.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  locustfile.py  plan.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_float_to_numeric.py  002_add_composite_indexes.py
backend/app/: config.py  database.py  main.py  redis.py
backend/app/api/: deps.py
backend/app/core/: cache.py  exceptions.py  json_encoder.py  logging.py  pagination.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit.py  kyc.py  market.py  notification.py  order.py  signal.py  transaction.py  user.py  wallet.py
backend/app/schemas/: auth.py  common.py  kyc.py  market.py  order.py  signal.py  transaction.py  user.py  wallet.py
backend/app/services/: auth_service.py  kyc_service.py  market_service.py  matching_engine.py  notification_service.py  order_service.py  user_service.py  (+3 more)
backend/nginx/: nginx.conf
backend/pgbouncer/: pgbouncer.ini  users.txt
backend/scripts/: create_admin.py  deploy.sh  generate_candles.py  generate_initial_migration.py  health_check.py  init_db.py  seed_data.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_cache.py  test_kyc.py  test_market.py  test_notifications.py  test_orders.py  test_pagination.py  test_signals.py  test_transactions.py  test_users.py  test_wallets.py  test_ws.py
(+189 files in other folders)
